--- a/projetinho_2/app/views/cities/index.html.erb
+++ b/projetinho_2/app/views/cities/index.html.erb
@@ -5,7 +5,8 @@
 <%= Date.today%>
 <%= Date.today.strftime("%d/%m/%Y")%>
 <%= br_date(Date.today)%>
-<table>
+
+<table class="highlight responsive-table striped">
   <thead>
     <tr>
       <th>Descripton</th>
